2001-04-30  Jakub Jelinek  <jakub@redhat.com>

	* posix/confstr.c (confstr) [_CS_V6_WIDTH_RESTRICTED_ENVS]: Move so
	that _CS_LFS_CFLAGS can fall through to the empty returned string
	case.  Add FALLTHROUGH comment.

2001-04-29  Ralf Baechle  <ralf@gnu.org>

	* sysdeps/unix/sysv/linux/mips/bits/sem.h: Make structure
	definitions match the kernel definitions.
	* sysdeps/unix/sysv/linux/mips/bits/ipc.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/shm.h: Likewise.

2001-04-29  Ben Collins  <bcollins@debian.org>

	* sysdeps/sparc/sparc64/dl-machine.h: Fix multiline strings
	warnings.
	* sysdeps/sparc/sparc64/soft-fp/qp_add.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_cmp.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_cmpe.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_div.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_dtoq.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_feq.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_fge.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_fgt.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_fle.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_flt.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_fne.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_mul.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_qtod.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_qtoi.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_qtos.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_qtoui.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_qtoux.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_qtox.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_qtox.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_sqrt.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_stoq.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/qp_sub.c: Likewise.
	* sysdeps/sparc/sparc64/soft-fp/sfp-machine.h: Likewise.

2001-04-29  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/kernel-features.h: Fix missing backslash
	in last change.
